--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
-  "private": true,
-  "hexo": {
-    "version": "3.8.0"
+  "name": "testblog",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bfuller123/testBlog.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bfuller123/testBlog/issues"
+  },
+  "homepage": "https://github.com/bfuller123/testBlog#readme",
   "dependencies": {
-    "hexo": "^3.7.0",
-    "hexo-browsersync": "^0.3.0",
-    "hexo-generator-archive": "^0.1.5",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index": "^0.2.1",
-    "hexo-generator-sitemap": "^1.2.0",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-prism-plugin": "^2.3.0",
-    "hexo-renderer-jade": "^0.4.1",
-    "hexo-renderer-marked": "^0.3.2",
-    "hexo-renderer-pug": "0.0.5",
-    "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "express": "^4.16.4",
+    "marked": "^0.6.0"
   }
 }
